--- a/demo.html
+++ b/demo.html
@@ -187,11 +187,15 @@
             </div>
 
             <div class="content">
-                <div class="con_head" style="padding:10px;">
-                    <div style="float: right;line-height: 16px;height: 22px;">扣费总金额：M元，充值总金额：N元</div>
-                </div>
                 <table class="stylized full" cellspacing="0">
                     <thead>
+                        <tr>
+                            <th colspan="8">
+                                <div class="toolbar">
+                                    总用户数：4000，总用气气量：1000方，总用气金额：2000元
+                                </div>
+                            </th>
+                        </tr>
                         <tr>
                             <th>序号</th>
                             <th>用户名称</th>
@@ -225,12 +229,10 @@
                             <td>Highlighted 6</td>
                         </tr>
                     </tbody>
-                    <tfoot>
-                    <tr>
-                        <td colspan="8">Table footer/放翻页</td>
-                    </tr>
-                    </tfoot>
                 </table>
+                <div class="pagination">
+                    <div class="fright">共M条，。。。。。。</div>
+                </div>
             </div>
         </div>
     </div>
