--- a/demo.html
+++ b/demo.html
@@ -205,7 +205,7 @@
                         <tr>
                             <th colspan="8">
                                 <div class="toolbar">
-                                    总用户数：4000，总用气气量：1000方，总用气金额：2000元
+                                    <div class="fright">总用户数：4000，总用气气量：1000方，总用气金额：2000元</div>
                                 </div>
                             </th>
                         </tr>
