--- a/demo.html
+++ b/demo.html
@@ -182,11 +182,11 @@
                             <div class="controls"><input type="text"/></div>
                         </div>
                         <div class="control-group form-actions">
-                            <span class="button button-green button-export">
+                            <span class="button button-green button-export fn-mr10">
                                 <button class="button-text">导出</button>
                                 <span class="button-icon"></span>
                             </span>
-                            <span class="button button-white button-printer">
+                            <span class="button button-white button-printer fn-mr10">
                                 <button class="button-text">打印</button>
                                 <span class="button-icon"></span>
                             </span>
